--- a/package.json
+++ b/package.json
@@ -5,7 +5,21 @@
   "author": "Thomas Hartill <tomhah@protonmail.com>",
   "license": "LGPL-3.0-only",
   "scripts": {
-    "build": "make build",
-    "install": "make install"
+    "prepare": "husky",
+    "lint": "eslint .",
+    "fix": "eslint --fix",
+    "typecheck": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "@tsconfig/strictest": "^2.0.5",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.6",
+    "prettier": "^3.3.2",
+    "typescript": "^5.4.5"
   }
 }
