--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "prepare": "husky",
     "lint": "eslint .",
     "fix": "eslint --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build": "rm -rf dist && node .esbuild.mjs",
+    "install": "gnome-extensions install --force dist/battery-conservation@tomhah.zip",
+    "enable": "gnome-extensions enable battery-conservation@tomhah"
   },
   "devDependencies": {
     "@girs/gio-2.0": "2.78.0-3.3.0",
@@ -20,6 +23,8 @@
     "@tsconfig/strictest": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
+    "adm-zip": "^0.5.14",
+    "esbuild": "^0.21.5",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
